Modified header links color and positions, it's now not sticky, and scrollbar is fixed

--- a/css/elements.css
+++ b/css/elements.css
@@ -11,7 +11,14 @@ html {
     /* Material UI dark mode color */
     background-color: rgba(12, 12, 12, 1); /* 1st Layer */
 
-    /* background-image: url("eyes.svg"); */
+    /* Argyle Patterns (Doesn't work for now) */
+    /* background-color: #6d695c;
+    background-image:
+    repeating-linear-gradient(120deg, rgba(255,255,255,.1), rgba(255,255,255,.1) 1px, transparent 1px, transparent 60px),
+    repeating-linear-gradient(60deg, rgba(255,255,255,.1), rgba(255,255,255,.1) 1px, transparent 1px, transparent 60px),
+    linear-gradient(60deg, rgba(0,0,0,.1) 25%, transparent 25%, transparent 75%, rgba(0,0,0,.1) 75%, rgba(0,0,0,.1)),
+    linear-gradient(120deg, rgba(0,0,0,.1) 25%, transparent 25%, transparent 75%, rgba(0,0,0,.1) 75%, rgba(0,0,0,.1));
+    background-size: 70px 120px; */
     /* scroll-behavior: smooth; */
 
 }
@@ -34,7 +41,7 @@ a {
     text-decoration: none;
     display: block;
     padding: 8px;
-    color: #03DAC6;
+    color: #FFEB3B;
     
 }
 
