--- a/css/headerfooter.css
+++ b/css/headerfooter.css
@@ -2,32 +2,54 @@ header {
     background-color: rgba(35, 43, 50, 0.4); /* 4th Layer */
     /* offset-x offset-y blur-radius spread-radius color */ /* 0 8px 8px 0 for raised */
     box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
-    position: sticky;
-    align-items: flex-start;
+    justify-content: space-between;
     margin: 0px;
     top: 0rem;
     padding-top: .5px;    
     padding-bottom: .5px;
-    
 
 }
 
 header li {
     display: inline-block;
+    
+}
 
-
+header a {
+    color: #C8C3BC;
+    padding: 6px;
+    font-size: 23px;
+    margin: 0;
+    padding: 0;
+    max-width: 768px;
+    margin-left: 5%;
+    margin-right: auto;
+    list-style: none;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+    display: flex;
+    list-style-image: initial;
 }
 
 header ul {
     margin: 0;
     padding: 0;
     list-style: none;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    display: flex;
+    list-style-image: initial;
+    margin-left: auto;
+    margin-right: 5%;
 
 }
 
 header li a {
-    padding: 6px;
-    font-size: 20px;
+    color: #03DAC6;
+    padding: 12px;
+    font-size: 16px;
     text-decoration: none;
 
 }
