--- a/css/scroll.scss
+++ b/css/scroll.scss
@@ -38,9 +38,9 @@ body {
     }
 }
 
-::-webkit-scrollbar { 
-    display: none; 
-    }
+// ::-webkit-scrollbar { 
+//     display: none; 
+//     }
 
 /* Scrollbar attributes */
 
